# itzamna-prompt-os

./: .cursorrules  .gitignore  ADENDO-CORRECOES-PLANO-V2.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  ESPECIFICACAO-TECNICA-V1.md  EXAMPLES.md  GEMINI.md  GLOSSARIO-TECNICO-PROMPTOS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  ITZAMNA-AGENT.md  LICENSE  MEMORY.md  PLANO-PARA-PROJETO.md  PROMPTOS-BRAIN-BLUEPRINT-V1.md  PROMPTOS-BRAIN-V2-IMPLEMENTATION-PLAN.md  QUICKSTART.md  QWEN.md  README.md  ROADMAP.md  arq-cerebro-simp-program-humano-agente.md  chat-export-1770058110675.json  chat-export-1770058123050.json  demo.sh  promptos.sh  pyproject.toml
.claude/: CONSTITUTION.md  settings.local.json
.context/: README.md  ai-assistant-guide.md  project.md  rules.md  tech.md
.cursor/: CONSTITUTION.md
.gemini/: CONSTITUTION.md
.github/: copilot-instructions.md
.opencode/: CONSTITUTION.md
.prompt-os/: CONSTITUTION.md  INDEX.md  MEMORY.md  PROMPTOS.md  README.md  requirements.txt  system.yaml
.qwen/: CONSTITUTION.md
MEMORY/: opencode-memory.md
config/: system.yaml
core/: __init__.py  cli.py  orchestrator.py
docs/: ARCHITECTURE.md  GAP-ANALYSIS.md  GLOSSARIO-TECNICO.md  IMPLEMENTATION-STATUS.md  INDEX.md  INTEGRATION-ANALYSIS.md  MONITORING-GUIDE.md  README.md  TIER-SYSTEM.md
knowledge/: INDEX.md
memory/: codex-memory.md  gemini-memory.md  itzamna-memory.md  opencode-memory.md  opencode-spec003-session.md  opencode-spec010-session.md  speckit-memory.md
personas/: INDEX.md  example_python_expert.yaml
(+438 files in other folders)
