[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itzamna-cli"
version = "3.0.0"
description = "Cognitive orchestrator for AI coding agents. Teaches CLIs to use context, memory, and workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Krystian YC Silva" },
]
keywords = ["ai", "agents", "cli", "prompt-engineering", "context-engineering", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
itzamna = "itzamna_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/itzamna_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/itzamna_cli/templates"
"core" = "share/itzamna_cli/core"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/core",
    "/README.md",
    "/pyproject.toml",
]
